--- a/web/vercel.json
+++ b/web/vercel.json
@@ -2,20 +2,8 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api/(.*)",
+            "source": "/(.*)",
             "destination": "/api/index.ts"
-        },
-        {
-            "source": "/",
-            "destination": "/public/index.html"
-        },
-        {
-            "source": "/(.*)\\.(css|js|png|jpg|jpeg|svg|json|ico)",
-            "destination": "/public/$1.$2"
-        },
-        {
-            "source": "/((?!api).*)",
-            "destination": "/public/$1"
         }
     ],
     "headers": [
