--- a/ios/streamsports/streamsports/Info.plist
+++ b/ios/streamsports/streamsports/Info.plist
@@ -12,5 +12,14 @@
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
 	</array>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_googlecast._tcp</string>
+		<string>_CC1AD845._googlecast._tcp</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Discover Cast-enabled devices on your local network.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Discover nearby Cast devices via ultrasonic tokens.</string>
 </dict>
 </plist>
