--- a/ios/streamsports/streamsports/Info.plist
+++ b/ios/streamsports/streamsports/Info.plist
@@ -17,5 +17,7 @@
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
