Update CSP to allow unsafe-eval for Cast/HLS

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -13,6 +13,10 @@
                 {
                     "key": "Access-Control-Allow-Origin",
                     "value": "*"
+                },
+                {
+                    "key": "Content-Security-Policy",
+                    "value": "default-src * data: blob: filesystem: about: ws: wss: 'unsafe-inline' 'unsafe-eval'; script-src * data: blob: 'unsafe-inline' 'unsafe-eval'; connect-src * data: blob: 'unsafe-inline'; img-src * data: blob: 'unsafe-inline'; frame-src * data: blob: ; style-src * data: blob: 'unsafe-inline';"
                 }
             ]
         }
