--- a/ios/streamsports/Podfile
+++ b/ios/streamsports/Podfile
@@ -3,4 +3,13 @@ use_frameworks!
 
 target 'streamsports' do
   pod 'google-cast-sdk'
+  pod 'GCDWebServer', '~> 3.5'
+
+  post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      end
+    end
+  end
 end
