--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.10",
-    "axios": "^1.13.2",
+    "axios": "^1.13.5",
     "express": "^5.2.1",
+    "puppeteer": "^24.37.5",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
